--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,7 @@
 <meta itemprop="name" content="Contact">
 <meta itemprop="description" content="We&#39;d love to hear from you">
 
-<meta itemprop="wordCount" content="22">
+<meta itemprop="wordCount" content="17">
 
 
 
@@ -152,28 +152,20 @@
 </thead>
 <tbody>
 <tr>
-<td>YouTube:</td>
-<td><a href="https://www.youtube.com/c/kenjee1?sub_confirmation=1">https://www.youtube.com/c/kenjee1?sub_confirmation=1</a></td>
-</tr>
-<tr>
-<td>Website:</td>
-<td><a href="https://www.playingnumbers.com">https://www.playingnumbers.com</a>, <a href="https://kennethjee.com/">https://kennethjee.com/</a></td>
-</tr>
-<tr>
-<td>Twitter:</td>
-<td><a href="https://twitter.com/KenJee_DS">https://twitter.com/KenJee_DS</a></td>
-</tr>
-<tr>
 <td>LinkedIn:</td>
-<td><a href="https://www.linkedin.com/in/kenjee/">https://www.linkedin.com/in/kenjee/</a></td>
+<td><a href="https://www.linkedin.com/in/athanasios-chaloudis-283881132/">https://www.linkedin.com/in/athanasios-chaloudis-283881132/</a></td>
 </tr>
 <tr>
 <td>Medium:</td>
-<td><a href="https://medium.com/@kenneth.b.jee">https://medium.com/@kenneth.b.jee</a></td>
+<td><a href="https://medium.com/@achaloudis">https://medium.com/@achaloudis</a></td>
 </tr>
 <tr>
 <td>GitHub:</td>
-<td><a href="https://github.com/PlayingNumbers">https://github.com/PlayingNumbers</a></td>
+<td><a href="https://github.com/AthanasiosChaloudis">https://github.com/AthanasiosChaloudis</a></td>
+</tr>
+<tr>
+<td>Twitch:</td>
+<td><a href="https://www.twitch.tv/cazuals">https://www.twitch.tv/cazuals</a></td>
 </tr>
 </tbody>
 </table>
