--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
 
   
   
-  <header class="cover bg-top" style="background-image: url('https://athanasioschaloudis.github.io/Athanasios_Portfolio/images/jeremy-thomas-rMmibFe4czY-unsplash.jpg');">
+  <header class="cover bg-top" style="background-image: url('https://athanasioschaloudis.github.io/Athanasios_Portfolio/images/prof.jpg');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
@@ -139,10 +139,14 @@
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><figure>
-    <img src="https://athanasioschaloudis.github.io/Athanasios_Portfolio/images/ken-jee.png"/> 
+    <img src="https://athanasioschaloudis.github.io/Athanasios_Portfolio/images/profpicNoPBW.png"/> 
 </figure>
 
-<p>Data Science and Sports Analytics are my passions. My name is Ken Jee and I have been working in the data science field doing sports analytics for the last 5 years. I have held data science positions in companies ranging from startups to fortune 100 organizations. I transitioned into data science from a business and consulting background. When I was first starting out on my data science journey I was extremely lost; there were very few resources for me to learn about this field from. I decided to start making youtube videos to share my experiences and to hopefully help others get break into the data science and sports analytics fields.</p>
+<p>My name is Athanasios Chaloudis, 24 years old, currently in my first Master&rsquo;s year and my last Bachelor&rsquo;s year in the University of Hamburg. My specialization fields lie in the Predictive Data analysis, Recommender Systems and the broader spectrum of data analytics. My Bachelor&rsquo;s Thesis is centered around Recommender Systems and the optimal settings in which they can be implemented.</p>
+<p>Apart from Machine Learning I am and always have been a passionate gamer and indie game developer. Through the years I have worked with multiple game engines and programmed different types of small scale games (Unity3D and Unreal Engine 4 mostly). My current project is a collaborative one in a team of 3, where we try to develop a full scale Android strategy defense game in Unity3D with C# as it&rsquo;s core language.</p>
+<p>I aspire to become a full-fledged Data Scientist and pursue a career in the Game Industry in a Lead position. The next steps to successfully capturing this goal is the completion of my Thesis in the beginning of 2021 and the finishing of the Master&rsquo;s degree in 2023.</p>
+<p>But let&rsquo;s also talk a bit hobbies! I have been playing and listening to music since I can remember. Some of the most memorable moments of the last years were concerts with some of my bands as a Lead singer and one or two exhibitions where I was playing the flute. Recently I have discovered a passion for jazz and I have started learning the piano. I strongly believe music helps the mind focus and gives humans the power to explore parts of the mind not used in other ways.</p>
+<p>In these tough times, collaborating, networking and connecting with people that have the same interests and aspirations as oneself is of utmost importance in order for us to be able to continue to grow individually even if the rest of the world stops. With this in mind, always feel free to contact me about potential networking.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
