--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
 
 
 
-<a href="https://www.linkedin.com/in/athanasios-chaloudis-283881132/" target="_blank" class="link-transition linkedin link dib z-999 pt3 pt0-l mr1" title="LinkedIn link" rel="noopener" aria-label="follow on LinkedIn——Opens in a new window">
+<a href="https://www.linkedin.com/in/achaloudis" target="_blank" class="link-transition linkedin link dib z-999 pt3 pt0-l mr1" title="LinkedIn link" rel="noopener" aria-label="follow on LinkedIn——Opens in a new window">
   <svg  height="32px"  style="enable-background:new 0 0 65 65;" version="1.1" viewBox="0 0 65 65" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z" style="fill-rule:evenodd;clip-rule:evenodd;fill:;"/>
 </svg>
@@ -142,11 +142,11 @@
     <img src="https://athanasioschaloudis.github.io/home/images/profpicNoPBW.png"/> 
 </figure>
 
-<p>My name is Athanasios Chaloudis, 24 years old, currently in my first Master&rsquo;s year and my last Bachelor&rsquo;s year in the University of Hamburg. My specialization fields lie in the Predictive Data analysis, Recommender Systems and the broader spectrum of data analytics. My Bachelor&rsquo;s Thesis is centered around Recommender Systems and the optimal settings in which they can be implemented.</p>
-<p>Apart from Machine Learning I am and always have been a passionate gamer and indie game developer. Through the years I have worked with multiple game engines and programmed different types of small scale games (Unity3D and Unreal Engine 4 mostly). My current project is a collaborative one in a team of 3, where we try to develop a full scale Android strategy defense game in Unity3D with C# as it&rsquo;s core language.</p>
-<p>I aspire to become a full-fledged Data Scientist and pursue a career in the Game Industry in a Lead position. The next steps to successfully capturing this goal is the completion of my Thesis in the beginning of 2021 and the finishing of the Master&rsquo;s degree in 2023.</p>
-<p>But let&rsquo;s also talk a bit hobbies! I have been playing and listening to music since I can remember. Some of the most memorable moments of the last years were concerts with some of my bands as a Lead singer and one or two exhibitions where I was playing the flute. Recently I have discovered a passion for jazz and I have started learning the piano. I strongly believe music helps the mind focus and gives humans the power to explore parts of the mind not used in other ways.</p>
-<p>In these tough times, collaborating, networking and connecting with people that have the same interests and aspirations as oneself is of utmost importance in order for us to be able to continue to grow individually even if the rest of the world stops. With this in mind, always feel free to contact me about potential networking.</p>
+<p>My name is Athanasios Chaloudis, 24 years old, currently in my first Master&rsquo;s year and my last Bachelor&rsquo;s year at the University of Hamburg. My specialization fields lie in Predictive Data analysis, Recommender Systems, and the broader spectrum of data analytics. My Bachelor&rsquo;s Thesis is centered around Recommender Systems and the optimal settings in which they can be implemented.</p>
+<p>Apart from Machine Learning, I am and always have been a passionate gamer and indie game developer. Through the years I have worked with multiple game engines and programmed different types of small-scale games (Unity3D and Unreal Engine 4 mostly). My current project is a collaborative one in a team of 3, where we try to develop a full-scale Android strategy defense game in Unity3D with C# as it&rsquo;s core language.</p>
+<p>I aspire to become a full-fledged Data Scientist and pursue a career in the Game Industry in a Lead position. The next steps to successfully capturing this goal is the completion of my Thesis at the beginning of 2021 and the finishing of the Master&rsquo;s degree in 2023.</p>
+<p>But let&rsquo;s also talk a bit about hobbies! I have been playing and listening to music since I can remember. Some of the most memorable moments of the last years were concerts with some of my bands as a Lead singer and one or two exhibitions where I was playing the flute. Recently I have discovered a passion for jazz and started learning the piano. I strongly believe music helps the mind focus and gives humans the power to explore parts of the mind not used in other ways.</p>
+<p>In these tough times, collaborating, networking, and connecting with people that have the same interests and aspirations as oneself is of utmost importance in order for us to be able to continue to grow individually even if the rest of the world stops. With this in mind, always feel free to contact me about potential networking.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
@@ -168,7 +168,7 @@
 
 
 
-<a href="https://www.linkedin.com/in/athanasios-chaloudis-283881132/" target="_blank" class="link-transition linkedin link dib z-999 pt3 pt0-l mr1" title="LinkedIn link" rel="noopener" aria-label="follow on LinkedIn——Opens in a new window">
+<a href="https://www.linkedin.com/in/achaloudis" target="_blank" class="link-transition linkedin link dib z-999 pt3 pt0-l mr1" title="LinkedIn link" rel="noopener" aria-label="follow on LinkedIn——Opens in a new window">
   <svg  height="32px"  style="enable-background:new 0 0 65 65;" version="1.1" viewBox="0 0 65 65" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z" style="fill-rule:evenodd;clip-rule:evenodd;fill:;"/>
 </svg>
